--- a/Dockerfile-debian.template
+++ b/Dockerfile-debian.template
@@ -1,4 +1,4 @@
-FROM buildpack-deps:%%TAG%%-scm
+FROM buildpack-deps:{{ env.variant }}-scm
 
 # gcc for cgo
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -11,21 +11,65 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 ENV PATH /usr/local/go/bin:$PATH
 
-ENV GOLANG_VERSION %%VERSION%%
+ENV GOLANG_VERSION {{ .version }}
 
 RUN set -eux; \
 	\
-# this "case" statement is generated via "update.sh"
-	%%ARCH-CASE%%; \
+	dpkgArch="$(dpkg --print-architecture)"; \
+	case "${dpkgArch##*-}" in \
+{{
+	[
+		.arches | to_entries[]
+		| select(.value.arch | startswith("linux-"))
+		| .key as $bashbrewArch
+		| (
+			{
+				arm32v5: "armel",
+				arm32v7: "armhf",
+				arm64v8: "arm64",
+				mips64le: "mips64el",
+				ppc64le: "ppc64el",
+			}
+			| .[$bashbrewArch] // $bashbrewArch
+		) as $dpkgArch
+		| .value
+		| (
+-}}
+		{{ $dpkgArch | @sh }}) \
+			arch={{ .arch | @sh }}; \
+			url={{ .url | @sh }}; \
+			sha256={{ .sha256 | @sh }}; \
+			;; \
+{{
+		)
+	] | add
+-}}
+		*) \
+# https://github.com/golang/go/issues/38536#issuecomment-616897960
+			arch='src'; \
+			url={{ .arches.src.url | @sh }}; \
+			sha256={{ .arches.src.sha256 | @sh }}; \
+			echo >&2; \
+			echo >&2 "warning: current architecture ($dpkgArch) does not have a corresponding Go binary release; will be building from source"; \
+			echo >&2; \
+			;; \
+	esac; \
 	\
-	url="https://golang.org/dl/go${GOLANG_VERSION}.${goRelArch}.tar.gz"; \
+	wget -O go.tgz.asc "$url.asc" --progress=dot:giga; \
 	wget -O go.tgz "$url" --progress=dot:giga; \
-	echo "${goRelSha256} *go.tgz" | sha256sum -c -; \
+	echo "$sha256 *go.tgz" | sha256sum --strict --check -; \
+	\
+# https://github.com/golang/go/issues/14739#issuecomment-324767697
+	export GNUPGHOME="$(mktemp -d)"; \
+# https://www.google.com/linuxrepositories/
+	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys 'EB4C 1BFD 4F04 2F6D DDCC EC91 7721 F63B D38B 4796'; \
+	gpg --batch --verify go.tgz.asc go.tgz; \
+	rm -rf "$GNUPGHOME" go.tgz.asc; \
+	\
 	tar -C /usr/local -xzf go.tgz; \
 	rm go.tgz; \
 	\
-# https://github.com/golang/go/issues/38536#issuecomment-616897960
-	if [ "$goRelArch" = 'src' ]; then \
+	if [ "$arch" = 'src' ]; then \
 		savedAptMark="$(apt-mark showmanual)"; \
 		apt-get update; \
 		apt-get install -y --no-install-recommends golang-go; \
