--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-**/Dockerfile         linguist-generated
-Dockerfile*.template  linguist-language=Dockerfile
+/*/**/Dockerfile       linguist-generated
+/Dockerfile*.template  linguist-language=Dockerfile
