--- a/1.17-rc/buster/Dockerfile
+++ b/1.17-rc/buster/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 ENV PATH /usr/local/go/bin:$PATH
 
-ENV GOLANG_VERSION 1.17beta1
+ENV GOLANG_VERSION 1.17rc1
 
 RUN set -eux; \
 	\
@@ -25,34 +25,34 @@ RUN set -eux; \
 	url=; \
 	case "${dpkgArch##*-}" in \
 		'amd64') \
-			url='https://dl.google.com/go/go1.17beta1.linux-amd64.tar.gz'; \
-			sha256='a479681705b65971f9db079bfce53c4393bfa241d952eb09de88fb40677d3c4c'; \
+			url='https://dl.google.com/go/go1.17rc1.linux-amd64.tar.gz'; \
+			sha256='bfbd3881a01ca3826777b1c40f241acacd45b14730d373259cd673d74e15e534'; \
 			;; \
 		'armel') \
 			export GOARCH='arm' GOARM='5' GOOS='linux'; \
 			;; \
 		'armhf') \
-			url='https://dl.google.com/go/go1.17beta1.linux-armv6l.tar.gz'; \
-			sha256='f4ab69c75a1f9e43b07ca9a0bfdf68ca1e2b0b51d4ebfb8c79f60ed14629f4e6'; \
+			url='https://dl.google.com/go/go1.17rc1.linux-armv6l.tar.gz'; \
+			sha256='1fd5c3733d6fab5ebcb3ca6ae2b478d370bb0638ba3966284ed7e7aa97acfc8a'; \
 			;; \
 		'arm64') \
-			url='https://dl.google.com/go/go1.17beta1.linux-arm64.tar.gz'; \
-			sha256='ede56f79c5061146929ab4a128e8ee7bc713d141e87b3df4e0aa670938e128b3'; \
+			url='https://dl.google.com/go/go1.17rc1.linux-arm64.tar.gz'; \
+			sha256='7498e426ce814a94a1d271d6bb80b9a2cf8c77ec49df531c57bd7a9ff82cfa4e'; \
 			;; \
 		'i386') \
-			url='https://dl.google.com/go/go1.17beta1.linux-386.tar.gz'; \
-			sha256='cebbf75985ba7e6f1a5b137916a6019685d52ecf36c262092ffc3f714cd85974'; \
+			url='https://dl.google.com/go/go1.17rc1.linux-386.tar.gz'; \
+			sha256='e9b78a4bd98165b86bb887643f58cc0464cc7ff7fae12516fc43114809c71e07'; \
 			;; \
 		'mips64el') \
 			export GOARCH='mips64le' GOOS='linux'; \
 			;; \
 		'ppc64el') \
-			url='https://dl.google.com/go/go1.17beta1.linux-ppc64le.tar.gz'; \
-			sha256='0a6e5034fcbd4b38642b56841a042135aec1e87f61258d2d70aafc0a667bdd11'; \
+			url='https://dl.google.com/go/go1.17rc1.linux-ppc64le.tar.gz'; \
+			sha256='d3aec884d6cbb8504bb25591a780759dd0ea5d9ede2a5e6af1dfe210df0a60f1'; \
 			;; \
 		's390x') \
-			url='https://dl.google.com/go/go1.17beta1.linux-s390x.tar.gz'; \
-			sha256='3501d139a9433775001730f1d9c3fb60d7b93b969fe16bd80fc7387a3d5259b1'; \
+			url='https://dl.google.com/go/go1.17rc1.linux-s390x.tar.gz'; \
+			sha256='23318ad51bd3d164aed307b500b9e89174e7df425a0cd03e619b65bbd65d6b19'; \
 			;; \
 		*) echo >&2 "error: unsupported architecture '$dpkgArch' (likely packaging update needed)"; exit 1 ;; \
 	esac; \
@@ -60,8 +60,8 @@ RUN set -eux; \
 	if [ -z "$url" ]; then \
 # https://github.com/golang/go/issues/38536#issuecomment-616897960
 		build=1; \
-		url='https://dl.google.com/go/go1.17beta1.src.tar.gz'; \
-		sha256='02b8973725f9bc545955865576e8c8f6ca672312f69fd9e5549c25b0ce1d75f0'; \
+		url='https://dl.google.com/go/go1.17rc1.src.tar.gz'; \
+		sha256='0d63be0f3abc79d35efcb60dfce4445e64bb1ea194edcfd9783a76316b7e85e2'; \
 		echo >&2; \
 		echo >&2 "warning: current architecture ($dpkgArch) does not have a corresponding Go binary release; will be building from source"; \
 		echo >&2; \
