--- a/1.17-rc/windows/nanoserver-1809/Dockerfile
+++ b/1.17-rc/windows/nanoserver-1809/Dockerfile
@@ -20,9 +20,9 @@ RUN setx /m PATH "%GOPATH%\bin;C:\go\bin;%PATH%"
 USER ContainerUser
 # doing this first to share cache across versions more aggressively
 
-ENV GOLANG_VERSION 1.17beta1
+ENV GOLANG_VERSION 1.17rc1
 
-COPY --from=golang:1.17beta1-windowsservercore-1809 C:\\go C:\\go
+COPY --from=golang:1.17rc1-windowsservercore-1809 C:\\go C:\\go
 RUN go version
 
 WORKDIR $GOPATH
