--- a/1.16/alpine3.14/Dockerfile
+++ b/1.16/alpine3.14/Dockerfile
@@ -6,8 +6,7 @@
 
 FROM alpine:3.14
 
-RUN apk add --no-cache \
-		ca-certificates
+RUN apk add --no-cache ca-certificates
 
 # set up nsswitch.conf for Go's "netgo" implementation
 # - https://github.com/golang/go/blob/go1.9.1/src/net/conf.go#L194-L275
@@ -19,16 +18,10 @@ ENV PATH /usr/local/go/bin:$PATH
 ENV GOLANG_VERSION 1.16.7
 
 RUN set -eux; \
-	apk add --no-cache --virtual .build-deps \
-		bash \
-		gcc \
-		gnupg \
-		go \
-		musl-dev \
-		openssl \
-	; \
-	apkArch="$(apk --print-arch)"; \
-	case "$apkArch" in \
+	apk add --no-cache --virtual .fetch-deps gnupg; \
+	arch="$(apk --print-arch)"; \
+	url=; \
+	case "$arch" in \
 		'x86_64') \
 			export GOARCH='amd64' GOOS='linux'; \
 			;; \
@@ -50,19 +43,23 @@ RUN set -eux; \
 		's390x') \
 			export GOARCH='s390x' GOOS='linux'; \
 			;; \
-		*) echo >&2 "error: unsupported architecture '$apkArch' (likely packaging update needed)"; exit 1 ;; \
+		*) echo >&2 "error: unsupported architecture '$arch' (likely packaging update needed)"; exit 1 ;; \
 	esac; \
-	\
+	build=; \
+	if [ -z "$url" ]; then \
 # https://github.com/golang/go/issues/38536#issuecomment-616897960
-	url='https://dl.google.com/go/go1.16.7.src.tar.gz'; \
-	sha256='1a9f2894d3d878729f7045072f30becebe243524cf2fce4e0a7b248b1e0654ac'; \
+		build=1; \
+		url='https://dl.google.com/go/go1.16.7.src.tar.gz'; \
+		sha256='1a9f2894d3d878729f7045072f30becebe243524cf2fce4e0a7b248b1e0654ac'; \
+# the precompiled binaries published by Go upstream are not compatible with Alpine, so we always build from source here 😅
+	fi; \
 	\
 	wget -O go.tgz.asc "$url.asc"; \
 	wget -O go.tgz "$url"; \
 	echo "$sha256 *go.tgz" | sha256sum -c -; \
 	\
 # https://github.com/golang/go/issues/14739#issuecomment-324767697
-	export GNUPGHOME="$(mktemp -d)"; \
+	GNUPGHOME="$(mktemp -d)"; export GNUPGHOME; \
 # https://www.google.com/linuxrepositories/
 	gpg --batch --keyserver keyserver.ubuntu.com --recv-keys 'EB4C 1BFD 4F04 2F6D DDCC EC91 7721 F63B D38B 4796'; \
 	gpg --batch --verify go.tgz.asc go.tgz; \
@@ -72,29 +69,40 @@ RUN set -eux; \
 	tar -C /usr/local -xzf go.tgz; \
 	rm go.tgz; \
 	\
-	( \
-		cd /usr/local/go/src; \
+	if [ -n "$build" ]; then \
+		apk add --no-cache --virtual .build-deps \
+			bash \
+			gcc \
+			go \
+			musl-dev \
+		; \
+		\
+		( \
+			cd /usr/local/go/src; \
 # set GOROOT_BOOTSTRAP + GOHOST* such that we can build Go successfully
-		export GOROOT_BOOTSTRAP="$(go env GOROOT)" GOHOSTOS="$GOOS" GOHOSTARCH="$GOARCH"; \
-		./make.bash; \
-	); \
-	\
+			export GOROOT_BOOTSTRAP="$(go env GOROOT)" GOHOSTOS="$GOOS" GOHOSTARCH="$GOARCH"; \
+			./make.bash; \
+		); \
+		\
+		apk del --no-network .build-deps; \
+		\
 # pre-compile the standard library, just like the official binary release tarballs do
-	go install std; \
+		go install std; \
 # go install: -race is only supported on linux/amd64, linux/ppc64le, linux/arm64, freebsd/amd64, netbsd/amd64, darwin/amd64 and windows/amd64
-#	go install -race std; \
-	\
-	apk del --no-network .build-deps; \
-	\
+#		go install -race std; \
+		\
 # remove a few intermediate / bootstrapping files the official binary release tarballs do not contain
-	rm -rf \
-		/usr/local/go/pkg/*/cmd \
-		/usr/local/go/pkg/bootstrap \
-		/usr/local/go/pkg/obj \
-		/usr/local/go/pkg/tool/*/api \
-		/usr/local/go/pkg/tool/*/go_bootstrap \
-		/usr/local/go/src/cmd/dist/dist \
-	; \
+		rm -rf \
+			/usr/local/go/pkg/*/cmd \
+			/usr/local/go/pkg/bootstrap \
+			/usr/local/go/pkg/obj \
+			/usr/local/go/pkg/tool/*/api \
+			/usr/local/go/pkg/tool/*/go_bootstrap \
+			/usr/local/go/src/cmd/dist/dist \
+		; \
+	fi; \
+	\
+	apk del --no-network .fetch-deps; \
 	\
 	go version
 
