Update to 1.18 GA (drop 1.16)

--- a/1.18/buster/Dockerfile
+++ b/1.18/buster/Dockerfile
@@ -4,7 +4,7 @@
 # PLEASE DO NOT EDIT IT DIRECTLY.
 #
 
-FROM buildpack-deps:bullseye-scm
+FROM buildpack-deps:buster-scm
 
 # install cgo-related dependencies
 RUN set -eux; \
@@ -20,41 +20,41 @@ RUN set -eux; \
 
 ENV PATH /usr/local/go/bin:$PATH
 
-ENV GOLANG_VERSION 1.16.15
+ENV GOLANG_VERSION 1.18
 
 RUN set -eux; \
 	arch="$(dpkg --print-architecture)"; arch="${arch##*-}"; \
 	url=; \
 	case "$arch" in \
 		'amd64') \
-			url='https://dl.google.com/go/go1.16.15.linux-amd64.tar.gz'; \
-			sha256='77c782a633186d78c384f972fb113a43c24be0234c42fef22c2d8c4c4c8e7475'; \
+			url='https://dl.google.com/go/go1.18.linux-amd64.tar.gz'; \
+			sha256='e85278e98f57cdb150fe8409e6e5df5343ecb13cebf03a5d5ff12bd55a80264f'; \
 			;; \
 		'armel') \
 			export GOARCH='arm' GOARM='5' GOOS='linux'; \
 			;; \
 		'armhf') \
-			url='https://dl.google.com/go/go1.16.15.linux-armv6l.tar.gz'; \
-			sha256='77d22e294ca4d0f1c4e65d7705902d73ec376e96da473023002333e087ab3106'; \
+			url='https://dl.google.com/go/go1.18.linux-armv6l.tar.gz'; \
+			sha256='a80fa43d1f4575fb030adbfbaa94acd860c6847820764eecb06c63b7c103612b'; \
 			;; \
 		'arm64') \
-			url='https://dl.google.com/go/go1.16.15.linux-arm64.tar.gz'; \
-			sha256='c2f27f0ce5620a9bc2ff3446165d1974ef94e9b885ec12dbfa3c07e0e198b7ce'; \
+			url='https://dl.google.com/go/go1.18.linux-arm64.tar.gz'; \
+			sha256='7ac7b396a691e588c5fb57687759e6c4db84a2a3bbebb0765f4b38e5b1c5b00e'; \
 			;; \
 		'i386') \
-			url='https://dl.google.com/go/go1.16.15.linux-386.tar.gz'; \
-			sha256='81bbff5e671de7e92fc899c7595b5ece4c4e5afa367e613a2aa40c40a0ce8bf1'; \
+			url='https://dl.google.com/go/go1.18.linux-386.tar.gz'; \
+			sha256='1c04cf4440b323a66328e0df95d409f955b9b475e58eae235fdd3d1f1cf02f4f'; \
 			;; \
 		'mips64el') \
 			export GOARCH='mips64le' GOOS='linux'; \
 			;; \
 		'ppc64el') \
-			url='https://dl.google.com/go/go1.16.15.linux-ppc64le.tar.gz'; \
-			sha256='f01ce3d9f007dbc0212db477901402a1c313b00c47d07b55ec3ecf780f039a05'; \
+			url='https://dl.google.com/go/go1.18.linux-ppc64le.tar.gz'; \
+			sha256='070351edac192483c074b38d08ec19251a83f8210765a532a84c3dcf8aec04d8'; \
 			;; \
 		's390x') \
-			url='https://dl.google.com/go/go1.16.15.linux-s390x.tar.gz'; \
-			sha256='bec2755dabc46b105d9eab9da7fc61ebd84eb0bd0bb715559dd5930b5a9ebf1a'; \
+			url='https://dl.google.com/go/go1.18.linux-s390x.tar.gz'; \
+			sha256='ea265f5e62fcaf941d53f0cdb81222d9668e1672a0d39d992f16ff0e87c0ee6b'; \
 			;; \
 		*) echo >&2 "error: unsupported architecture '$arch' (likely packaging update needed)"; exit 1 ;; \
 	esac; \
@@ -62,8 +62,8 @@ RUN set -eux; \
 	if [ -z "$url" ]; then \
 # https://github.com/golang/go/issues/38536#issuecomment-616897960
 		build=1; \
-		url='https://dl.google.com/go/go1.16.15.src.tar.gz'; \
-		sha256='90a08c689279e35f3865ba510998c33a63255c36089b3ec206c912fc0568c3d3'; \
+		url='https://dl.google.com/go/go1.18.src.tar.gz'; \
+		sha256='38f423db4cc834883f2b52344282fa7a39fbb93650dc62a11fdf0be6409bdad6'; \
 		echo >&2; \
 		echo >&2 "warning: current architecture ($arch) does not have a compatible Go binary release; will be building from source"; \
 		echo >&2; \
