--- a/1.17/stretch/Dockerfile
+++ b/1.17/stretch/Dockerfile
@@ -91,6 +91,8 @@ RUN set -eux; \
 		apt-get update; \
 		apt-get install -y --no-install-recommends golang-go; \
 		\
+		export GOCACHE='/tmp/gocache'; \
+		\
 		( \
 			cd /usr/local/go/src; \
 # set GOROOT_BOOTSTRAP + GOHOST* such that we can build Go successfully
@@ -111,6 +113,7 @@ RUN set -eux; \
 			/usr/local/go/pkg/tool/*/api \
 			/usr/local/go/pkg/tool/*/go_bootstrap \
 			/usr/local/go/src/cmd/dist/dist \
+			"$GOCACHE" \
 		; \
 	fi; \
 	\
