--- a/Dockerfile-linux.template
+++ b/Dockerfile-linux.template
@@ -140,6 +140,8 @@ RUN set -eux; \
 		apt-get install -y --no-install-recommends golang-go; \
 {{ ) end -}}
 		\
+		export GOCACHE='/tmp/gocache'; \
+		\
 		( \
 			cd /usr/local/go/src; \
 # set GOROOT_BOOTSTRAP + GOHOST* such that we can build Go successfully
@@ -164,6 +166,7 @@ RUN set -eux; \
 			/usr/local/go/pkg/tool/*/api \
 			/usr/local/go/pkg/tool/*/go_bootstrap \
 			/usr/local/go/src/cmd/dist/dist \
+			"$GOCACHE" \
 		; \
 	fi; \
 	\
