--- a/1.19-rc/windows/windowsservercore-ltsc2022/Dockerfile
+++ b/1.19-rc/windows/windowsservercore-ltsc2022/Dockerfile
@@ -53,14 +53,14 @@ RUN $newPath = ('{0}\bin;C:\Program Files\Go\bin;{1}' -f $env:GOPATH, $env:PATH)
 	[Environment]::SetEnvironmentVariable('PATH', $newPath, [EnvironmentVariableTarget]::Machine);
 # doing this first to share cache across versions more aggressively
 
-ENV GOLANG_VERSION 1.19beta1
+ENV GOLANG_VERSION 1.19rc1
 
-RUN $url = 'https://dl.google.com/go/go1.19beta1.windows-amd64.zip'; \
+RUN $url = 'https://dl.google.com/go/go1.19rc1.windows-amd64.zip'; \
 	Write-Host ('Downloading {0} ...' -f $url); \
 	[Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; \
 	Invoke-WebRequest -Uri $url -OutFile 'go.zip'; \
 	\
-	$sha256 = '936f9aa3d496d0ef655275c5f2bf9fdcb52211ceb3a48f7ce36b0b5258e55baa'; \
+	$sha256 = 'f7cfb2bfa41a77e934c415ebf785edee4b16df44835d4a48f07aa77187c895ef'; \
 	Write-Host ('Verifying sha256 ({0}) ...' -f $sha256); \
 	if ((Get-FileHash go.zip -Algorithm sha256).Hash -ne $sha256) { \
 		Write-Host 'FAILED!'; \
